--- a/get_token/index.html
+++ b/get_token/index.html
@@ -1,3 +1,8 @@
+<head>
+  <meta property="og:title" content="Получение токена!" />
+  <meta property="og:description" content="Получить API токен для lolz.guru" />
+<head>
+
 <script>
   document.location.replace('https://lolz.guru/account/authorize?client_id=ughc8618sx&response_type=token&scope=read+post+market');
 </script>
